fix wrong images on UI

--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -336,20 +336,41 @@
                     </div>
                     <div class="col-md-4">
 
+                        @if(Model.Culture == "en")
+                        {
+                            <div class="card-transparent mb-2" style="margin-top:20px;">
+                                <a href="@urlBlog" style=" text-decoration: none;">
+                                    <img class="card-img-top side-card-size" src="/content/images/Blogs.png" alt="Card image cap" style="height:200px;">
+                                </a>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="card-transparent mb-2" style="margin-top:20px;">
+                                <a href="@urlBlog" style=" text-decoration: none;">
+                                    <img class="card-img-top side-card-size" src="/content/images/Blogs_Ukrainian.png" alt="Card image cap" style="height:200px;">
+                                </a>
+                            </div>
+                        }
 
-                        <div class="card-transparent mb-2" style="margin-top:20px;">
-                            <a href="@urlBlog" style=" text-decoration: none;">
-                                <img class="card-img-top side-card-size" src="/content/images/Blogs.png" alt="Card image cap" style="height:200px;">
-                                
-                            </a>
-                        </div>
+                        @if(Model.Culture == "en")
+                        {
+                            <div class="card-transparent mb-2" style="margin-top:20px;">
+                                <a href="@urlMedia" style=" text-decoration: none;">
+                                    <img class="card-img-top" src="/content/images/Videos.png" alt="Card image cap" style="height:200px;">
+                                </a>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="card-transparent mb-2" style="margin-top:20px;">
+                                <a href="@urlMedia" style=" text-decoration: none;">
+                                    <img class="card-img-top" src="/content/images/Videos_Ukrainian.png" alt="Card image cap" style="height:200px;">
+                                </a>
+                            </div>
+                        }
 
-
-                        <div class="card-transparent mb-2" style="margin-top:20px;">
-                            <a href="@urlMedia" style=" text-decoration: none;">
-                                <img class="card-img-top" src="/content/images/Videos.png" alt="Card image cap" style="height:200px;">
-                            </a>
-                        </div>
+                        
                     </div>
                 }
                 else
