add google analytics

--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -22,6 +22,16 @@
     })(window,document,'script','dataLayer','GTM-K3WXCPB');</script>
     <!-- End Google Tag Manager -->
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGET2J1N55"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-DGET2J1N55');
+    </script>
+
     <meta name="facebook-domain-verification" content="6v5xd84nny3mg2fu2xg89lk4nypzzn" />
 
     <meta property="og:url" content="https://www.dopomoga.ge" />
