--- a/test/Views/Home/AboutUs.cshtml
+++ b/test/Views/Home/AboutUs.cshtml
@@ -120,7 +120,36 @@
                     @Html.Raw(Model.Info.PageTextInEnglish)
                 }
             </div>
+
+
+            <br />
+            <br />
+
+            გამოიწერეთ ჩვენი ვებ-გვერდის სიახლეები, რომლებიც პირდაპირ თქვენს ელ.ფოსტაზე გამოიგზავნება.
+            <br />
+            <br />
+
+
+            <div class="row" style="border: 1px solid #adb5bd; padding:10px;">
+                <label class="form-label" style="color:black; font-size:20px; padding:1px;">სიახლეების გამოწერა</label>
+                <hr style="padding-left: 10px; padding-right:10px;" />
+
+                <div class="d-flex justify-content-center">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <label for="exampleInputEmail1" id="exampleInputEmail1Label" style="margin-top:4px; color:black">ელ.ფოსტა<span style="color:red">*</span></label>
+                        </div>
+                        <div class="col-md-10">
+                            <input type="email" class="form-control" id="exampleInputEmail1" style="padding-bottom:10px; margin-left:10px;">
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <button style="margin-top:10px;background-color:darkblue; color:white; width:150px;height:40px;" id="SubscriberSubmit">გამოწერა</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </div>
     <div class="row" style="background:#EEEEEE;">
         <div class="col-lg-3">
@@ -187,9 +216,24 @@
                         color: #626262;">© 2022 Dopomoga Ukraini</p>
         </div>
     </div>
-
 </div>
 
+
+<script>
+
+    var myEl = document.getElementById('SubscriberSubmit');
+
+    myEl.addEventListener('click', function () {
+        $.ajax({
+            type: "POST",
+            url: '@Url.Action("AddSubscriber","Home")',
+            data: {email: $("#exampleInputEmail1").val()},
+            success: function (response){
+                alert(response);
+            },
+        });
+    }, false);
+</script>
 
 <script>
 
@@ -206,10 +250,15 @@
         if(newWidth >= 1000)
         {
             $("#CategoriesDiv").show();
+
+            $("#exampleInputEmail1Label").css("margin-left", "0px");
         }
         else
         {
             $("#CategoriesDiv").hide();
+
+            $("#exampleInputEmail1Label").css("margin-left","10px");
+            $("#exampleInputEmail1Label").css("margin-bottom","5px");
         }
     });
 
@@ -221,10 +270,18 @@
         if(newWidth >= 1000)
         {
             $("#CategoriesDiv").show();
+
+
+            $("#exampleInputEmail1Label").css("margin-left", "-10px");
+            $("#exampleInputEmail1Label").css("margin-bottom", "-5px");
         }
         else
         {
             $("#CategoriesDiv").hide();
+
+
+            $("#exampleInputEmail1Label").css("margin-left", "10px");
+            $("#exampleInputEmail1Label").css("margin-bottom", "5px");
         }
     });
 
