--- a/test/Views/Home/AboutUs.cshtml
+++ b/test/Views/Home/AboutUs.cshtml
@@ -125,25 +125,50 @@
             <br />
             <br />
 
-            გამოიწერეთ ჩვენი ვებ-გვერდის სიახლეები, რომლებიც პირდაპირ თქვენს ელ.ფოსტაზე გამოიგზავნება.
-            <br />
-            <br />
-
+            @if (@Model.Culture == "en")
+            {
+                <p>გამოიწერეთ სიახლეები ელ.ფოსტაზე</p>
+            }
+            else
+            {
+                <p>Підпишіться на новини електронною поштою</p>
+            }
 
             <div class="row" style="border: 1px solid #adb5bd; padding:10px;">
-                <label class="form-label" style="color:black; font-size:20px; padding:1px;">სიახლეების გამოწერა</label>
+                @if (@Model.Culture == "en")
+                {
+                    <label class="form-label" style="color:black; font-size:20px; padding:1px;">სიახლეების გამოწერა</label>
+                }
+                else
+                {
+                    <label class="form-label" style="color:black; font-size:20px; padding:1px;">Підпишіться на новини</label>
+                }
                 <hr style="padding-left: 10px; padding-right:10px;" />
 
                 <div class="d-flex justify-content-center">
                     <div class="row">
                         <div class="col-md-2">
-                            <label for="exampleInputEmail1" id="exampleInputEmail1Label" style="margin-top:4px; color:black">ელ.ფოსტა<span style="color:red">*</span></label>
+                            @if (@Model.Culture == "en")
+                            {
+                                <label for="exampleInputEmail1" id="exampleInputEmail1Label" style="margin-top:4px; color:black">ელ.ფოსტა<span style="color:red">*</span></label>
+                            }
+                            else
+                            {
+                                <label for="exampleInputEmail1" id="exampleInputEmail1Label" style="margin-top:4px; color:black">Ел.пошта<span style="color:red">*</span></label>
+                            }
                         </div>
                         <div class="col-md-10">
                             <input type="email" class="form-control" id="exampleInputEmail1" style="padding-bottom:10px; margin-left:10px;">
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button style="margin-top:10px;background-color:darkblue; color:white; width:150px;height:40px;" id="SubscriberSubmit">გამოწერა</button>
+                            @if (@Model.Culture == "en")
+                            {
+                                <button style="margin-top:10px;background-color:darkblue; color:white; width:150px;height:40px;" id="SubscriberSubmit">გამოწერა</button>
+                            }
+                            else
+                            {
+                                <button style="margin-top:10px;background-color:darkblue; color:white; width:150px;height:40px;" id="SubscriberSubmit">Підписка</button>
+                            }
                         </div>
                     </div>
                 </div>
