change module color when clicked

--- a/test/Views/Home/Contacts.cshtml
+++ b/test/Views/Home/Contacts.cshtml
@@ -210,7 +210,8 @@
     
     window.addEventListener('load', function(event){
 
-       $("#faqP").css("color", "white");
+        $("#faqP").css("color", "white");
+        $("#subscribeP").css("color", "white");
         $("#mainPageP").css("color", "white");
         $("#contactsP").css("color", "#F8BF0C");
         $("#aboutUsP").css("color", "white");
