--- a/test/Views/Home/AboutUs.cshtml
+++ b/test/Views/Home/AboutUs.cshtml
@@ -264,7 +264,8 @@
 
     window.addEventListener('load', function(event){
 
-       $("#faqP").css("color", "white");
+        $("#faqP").css("color", "white");
+        $("#subscribeP").css("color", "white");
         $("#mainPageP").css("color", "white");
         $("#contactsP").css("color", "white");
         $("#aboutUsP").css("color", "#F8BF0C");
