--- a/test/Views/Home/FAQ.cshtml
+++ b/test/Views/Home/FAQ.cshtml
@@ -188,6 +188,7 @@
         window.addEventListener('load', function(event){
 
         $("#faqP").css("color", "#F8BF0C");
+        $("#subscribeP").css("color", "white");
         $("#mainPageP").css("color", "white");
         $("#contactsP").css("color", "white");
         $("#aboutUsP").css("color", "white");
