--- a/test/Views/Home/Subscribe.cshtml
+++ b/test/Views/Home/Subscribe.cshtml
@@ -115,9 +115,10 @@
     window.addEventListener('load', function (event) {
 
         $("#faqP").css("color", "white");
+        $("#subscribeP").css("color", "#F8BF0C");
         $("#mainPageP").css("color", "white");
         $("#contactsP").css("color", "white");
-        $("#aboutUsP").css("color", "#F8BF0C");
+        $("#aboutUsP").css("color", "white");
         $('#load').hide();
         var newWidth = window.innerWidth;
         var newHeight = window.innerHeight;
