--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -325,7 +325,7 @@
 
                                 <li class="nav-item" id="DesktopNavigationMenuFAQ">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Subscribe">
-                                        <p id="faqP" style="font-family: 'FiraGO-SemiBold' !important;
+                                        <p id="subscribeP" style="font-family: 'FiraGO-SemiBold' !important;
                                                                         font-size: 20px;
                                                                         font-style: normal;
                                                                         font-weight: 700;
