--- a/test/Views/Home/Subscribe.cshtml
+++ b/test/Views/Home/Subscribe.cshtml
@@ -92,6 +92,82 @@
         </div>
 
     </div>
+
+    <div class="row" style="height:50px;">
+        <div class="col-lg-2">
+            <img src="~/content/images/USAIDLogo.png" style="margin-left:10px; margin-top:10px;" class="img-fluid" alt="Responsive image">
+        </div>
+        <div class="col-lg-2">
+            <img src="~/content/images/SecondLogo.png" style="margin-top:10px;" class="img-fluid" alt="Responsive image" id="secondImage">
+        </div>
+        <div class="col-lg-2">
+            <img src="~/content/images/EULogo.png" style="margin-left:10px; margin-top:10px;" class="img-fluid" alt="Responsive image">
+        </div>
+        <div class="col-lg-1">
+            <img src="~/content/images/PIN.png" style="margin-left:10px; margin-top:10px;" class="img-fluid" alt="Responsive image">
+        </div>
+
+        <div class="col-lg-4">
+            <p style="font-family: 'Roboto';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 11px;
+                        line-height: 15px;
+                        margin-left: 20px;
+                        margin-top:10px;
+                        /* or 150% */
+
+                        letter-spacing: 0.1em;
+
+                        color: #626262;">ვებგვერდზე განთავსებული ინფორმაციის მოძიება და შეკრება შესაძლებელი გახდა ამერიკის შეერთებული შტატების საერთაშორისო განვითარების სააგენტოსა (USAID) და ევროკავშირის დაფინანსებით. ვებგვერდზე განთავსებულ მასალაზე პასუხისმგებელია მხოლოდ საინიციატივო ჯგუფი და შესაძლოა არ გამოხატავდეს ამერიკის შეერთებული შტატების საერთაშორისო განვითარების სააგენტოს (USAID), ამერიკის შეერთებული შტატების მთავრობის ან  ევროკავშირის შეხედულებებს.</p>
+        </div>
+        <div class="col-md-1 justify-content-center" style="text-align:center">
+            <div style="margin-left:auto;margin-right:auto;">
+                <div class="d-flex justify-content-center" style="margin-top:20px;">
+                    <div style="width:30px; height:30px; cursor:pointer" onclick="window.open('https://t.me/+ugrIKNOeRGAzMzVi', '_blank');">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 48 47">
+                            <circle cx="23" cy="24" r="23" fill="white" />
+                            <path fill="#fff" stroke="none" d="M23.554 46.5c-12.693 0-23-10.325-23-23s10.307-23 23-23c12.692 0 23 10.307 23 23 0 12.692-10.326 23-23 23zm0-45.217c-12.245 0-22.218 9.973-22.218 22.217 0 12.244 9.973 22.218 22.218 22.218 12.244 0 22.217-9.974 22.217-22.218S35.798 1.283 23.554 1.283z" />
+                            <path fill="#017FCD" d="M34.831 14.45c-.273-.6-.819-.928-1.564-.928-.546 0-1.019.163-1.073.2-.164.054-15.88 6.075-22.318 8.712-.564.237-.928.564-1.091.964-.237.637.218 1.291.636 1.492 1.6.709 4.93 1.691 5.984 1.982.346 1.146 1.546 5.13 2.11 6.84.127.454.564.727 1.128.727h.145a.606.606 0 00.382-.2.497.497 0 00.146-.346l.327-4.82c.637.473 1.546 1.164 2.565 1.91 2 1.491 4.402 3.274 5.73 4.238.472.345.927.509 1.364.509.964 0 1.527-.837 1.71-1.546 1.109-4.31 2.728-12.46 3.71-17.334l.218-1.073c.128-.636.018-1.037-.109-1.328zM18.552 27.89l-.31 4.275c-.727-2.328-1.8-5.893-1.818-5.948v-.036l12.296-8.003s.836-.582 1.164-.637c.436-.09.527.073.454.182-.29.4-1.71 1.62-1.71 1.62l-9.803 8.111a.507.507 0 00-.273.437z" />
+                        </svg>
+
+                    </div>
+
+                    <div style="width:30px; height:30px; margin-left:15px; margin-right:15px; cursor:pointer" onclick="window.open('https://instagram.com/dopomoga.ge?utm_medium=copy_link', '_blank');">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 48 47">
+                            <circle cx="23" cy="24" r="23" fill="white" />
+                            <path fill="#fff" stroke="none" d="M24.344 46.5c-12.675 0-23-10.308-23-23 0-12.693 10.307-23 23-23 12.692 0 23 10.307 23 23 0 12.692-10.326 23-23 23zm0-45.217c-12.245 0-22.218 9.973-22.218 22.217 0 12.244 9.973 22.218 22.218 22.218 12.244 0 22.217-9.974 22.217-22.218S36.588 1.283 24.344 1.283z" />
+                            <path fill="#017FCD" d="M24.344 13.827c3.31 0 3.71.018 5.002.073 1.2.055 1.873.255 2.31.418.582.219 1 .492 1.419.928.436.437.709.855.927 1.419.164.436.364 1.091.419 2.31.054 1.31.072 1.691.072 5.002 0 3.31-.018 3.71-.072 5.002-.055 1.2-.255 1.873-.419 2.31-.218.582-.49 1-.927 1.419-.437.436-.855.709-1.42.927-.436.164-1.09.364-2.31.419-1.309.054-1.69.072-5.001.072-3.31 0-3.71-.018-5.002-.072-1.2-.055-1.873-.255-2.31-.419-.582-.218-1-.49-1.419-.927a3.843 3.843 0 01-.927-1.42c-.164-.436-.364-1.09-.419-2.31-.054-1.309-.072-1.69-.072-5.001 0-3.31.018-3.71.072-5.002.055-1.2.255-1.874.419-2.31.218-.582.49-.982.927-1.419.437-.437.855-.71 1.419-.928.436-.163 1.091-.363 2.31-.418 1.291-.055 1.692-.073 5.002-.073zm0-2.237c-3.365 0-3.783.018-5.111.073-1.328.054-2.22.273-3.001.582-.819.31-1.51.746-2.201 1.437a6.22 6.22 0 00-1.437 2.2c-.31.783-.51 1.692-.582 3.002-.055 1.328-.073 1.746-.073 5.111 0 3.365.018 3.783.073 5.111.054 1.328.273 2.22.582 3.001.31.819.746 1.51 1.437 2.201a6.22 6.22 0 002.2 1.437c.783.31 1.692.51 3.002.582 1.328.055 1.746.073 5.11.073 3.366 0 3.784-.018 5.112-.073 1.328-.054 2.219-.273 3.001-.582.819-.31 1.51-.746 2.201-1.437a6.22 6.22 0 001.437-2.2c.31-.783.51-1.692.582-3.002.055-1.328.073-1.746.073-5.111 0-3.365-.018-3.783-.073-5.111-.055-1.328-.273-2.22-.582-3.001-.31-.819-.746-1.51-1.437-2.201a6.219 6.219 0 00-2.2-1.437c-.783-.31-1.692-.51-3.002-.582-1.328-.055-1.746-.073-5.111-.073z" />
+                            <path fill="#017FCD" d="M24.344 17.629a6.373 6.373 0 00-6.366 6.366 6.373 6.373 0 006.366 6.366 6.373 6.373 0 006.366-6.366c-.018-3.51-2.856-6.366-6.366-6.366zm0 10.495a4.137 4.137 0 01-4.13-4.13 4.137 4.137 0 014.13-4.128 4.137 4.137 0 014.129 4.129 4.137 4.137 0 01-4.13 4.129zM32.438 17.374c0 .819-.673 1.492-1.492 1.492a1.498 1.498 0 01-1.491-1.492c0-.818.673-1.491 1.492-1.491.818 0 1.491.673 1.491 1.491z" />
+                        </svg>
+                    </div>
+
+                    <div style="width:30px; height:30px;  cursor:pointer" onclick="window.open('https://www.facebook.com/www.dopomoga.ge/', '_blank');">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="none" viewBox="0 0 48 47">
+                            <circle cx="24" cy="23" r="22" fill="white" />
+                            <path fill="#fff" stroke="white" d="M24.156 46.5c-12.675 0-23-10.308-23-23 0-12.693 10.307-23 23-23 12.675 0 23 10.308 23 23s-10.325 23-23 23zm0-45.217c-12.244 0-22.217 9.973-22.217 22.217 0 12.244 9.973 22.218 22.217 22.218 12.244 0 22.218-9.974 22.218-22.218S36.4 1.283 24.155 1.283z" />
+                            <path fill="#017FCD" d="M20.7 36.977h5.511V23.19h3.838l.418-4.62h-4.256v-2.619c0-1.091.219-1.51 1.273-1.51h2.983V9.658h-3.801c-4.093 0-5.948 1.8-5.948 5.256v3.674h-2.856v4.675h2.856v13.714H20.7z" />
+                        </svg>
+                    </div>
+                </div>
+
+            </div>
+            <p style="font-family: 'Roboto';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 10px;
+                        line-height: 15px;
+                        margin-top:20px;
+                        margin-left:auto;
+                        margin-right:auto;
+                        /* or 150% */
+
+                        letter-spacing: 0.1em;
+
+                        color: #626262;">© 2022 Dopomoga Ukraini</p>
+        </div>
+    </div>
+
 </div>
 
 <script>
@@ -126,6 +202,8 @@
         if (newWidth >= 1000) {
             $("#CategoriesDiv").show();
 
+            $("#secondImage").css("margin-left", "40px");
+            $("#secondImage").css("height", "68%");
             $("#exampleInputEmail1Label").css("margin-left", "0px");
         }
         else {
@@ -133,6 +211,8 @@
 
             $("#exampleInputEmail1Label").css("margin-left", "10px");
             $("#exampleInputEmail1Label").css("margin-bottom", "5px");
+            $("#secondImage").css("margin-left", "");
+            $("#secondImage").css("height", "95%");
         }
     });
 
@@ -145,12 +225,17 @@
             $("#CategoriesDiv").show();
 
 
+            $("#secondImage").css("margin-left", "40px");
+            $("#secondImage").css("height", "68%");
+
             $("#exampleInputEmail1Label").css("margin-left", "-10px");
             $("#exampleInputEmail1Label").css("margin-bottom", "-5px");
         }
         else {
             $("#CategoriesDiv").hide();
 
+            $("#secondImage").css("margin-left", "");
+            $("#secondImage").css("height", "95%");
 
             $("#exampleInputEmail1Label").css("margin-left", "10px");
             $("#exampleInputEmail1Label").css("margin-bottom", "5px");
