--- a/test/Views/Home/AboutUs.cshtml
+++ b/test/Views/Home/AboutUs.cshtml
@@ -181,7 +181,7 @@
             <img src="~/content/images/USAIDLogo.png" style="margin-left:10px; margin-top:10px;" class="img-fluid" alt="Responsive image">
         </div>
         <div class="col-lg-2">
-            <img src="~/content/images/SecondLogo.png" style="margin-top:10px;" class="img-fluid" alt="Responsive image" id="secondImage">
+            <img src="~/content/images/SecondLogo.png" style="margin-top:10px;margin-left:10px; margin-right:10px;" class="img-fluid" alt="Responsive image" id="secondImage">
         </div>
         <div class="col-lg-2">
             <img src="~/content/images/EULogo.png" style="margin-left:10px; margin-top:10px;" class="img-fluid" alt="Responsive image">
@@ -310,10 +310,6 @@
 
         if(newWidth >= 1000)
         {
-
-            $("#secondImage").css("margin-left", "40px");
-            $("#secondImage").css("height", "68%");
-
             $("#CategoriesDiv").show();
 
 
@@ -327,8 +323,6 @@
 
             $("#exampleInputEmail1Label").css("margin-left", "10px");
             $("#exampleInputEmail1Label").css("margin-bottom", "5px");
-            $("#secondImage").css("margin-left", "");
-            $("#secondImage").css("height", "95%");
         }
     });
 
