--- a/test/Views/Home/Categories.cshtml
+++ b/test/Views/Home/Categories.cshtml
@@ -493,7 +493,7 @@
             <img src="~/content/images/USAIDLogo.png" style="margin-left:10px; margin-top:10px;" class="img-fluid" alt="Responsive image">
         </div>
         <div class="col-lg-2">
-            <img src="~/content/images/SecondLogo.png" style="margin-top:10px;" class="img-fluid" alt="Responsive image" id="secondImage">
+            <img src="~/content/images/SecondLogo.png" style="margin-top:10px;margin-left:10px; margin-right:10px;" class="img-fluid" alt="Responsive image" id="secondImage">
         </div>
         <div class="col-lg-2">
             <img src="~/content/images/EULogo.png" style="margin-left:10px; margin-top:10px;" class="img-fluid" alt="Responsive image">
@@ -579,8 +579,6 @@
             $("#DesktopCategories").show();
             $("#CategoriesDiv").show();
 
-            $("#secondImage").css("margin-left", "40px");
-            $("#secondImage").css("height", "68%");
         }
         else
         {
@@ -590,8 +588,6 @@
             {
                 $("#CategoriesDiv").hide();
             }
-            $("#secondImage").css("margin-left", "");
-            $("#secondImage").css("height", "95%");
             
         }
     });
@@ -601,8 +597,6 @@
         var newHeight = window.innerHeight; 
 
         if(newWidth >= 1000) {
-            $("#secondImage").css("margin-left", "40px");
-            $("#secondImage").css("height", "68%");
             $("#MobileCategories").hide();
             $("#DesktopCategories").show();
             $("#CategoriesDiv").show();
@@ -614,8 +608,6 @@
             if($("#ChosenCategoryIdTmp").val() == "47" || $("#ChosenCategoryIdTmp").val() == "48")
             {
                 $("#CategoriesDiv").hide();
-                $("#secondImage").css("margin-left", "");
-                $("#secondImage").css("height", "95%");
             }
             
         }
