--- a/test/Views/Home/FAQ.cshtml
+++ b/test/Views/Home/FAQ.cshtml
@@ -121,7 +121,7 @@
             <img src="~/content/images/USAIDLogo.png" style="margin-left:10px; margin-top:10px;" class="img-fluid" alt="Responsive image">
         </div>
         <div class="col-lg-2">
-            <img src="~/content/images/SecondLogo.png" style="margin-top:10px;" class="img-fluid" alt="Responsive image" id="secondImage">
+            <img src="~/content/images/SecondLogo.png" style="margin-top:10px;margin-left:10px; margin-right:10px;" class="img-fluid" alt="Responsive image" id="secondImage">
         </div>
         <div class="col-lg-2">
             <img src="~/content/images/EULogo.png" style="margin-left:10px; margin-top:10px;" class="img-fluid" alt="Responsive image">
@@ -208,15 +208,11 @@
         if(newWidth >= 1000)
         {
 
-            $("#secondImage").css("margin-left", "40px");
-            $("#secondImage").css("height", "68%");
             $("#CategoriesDiv").show();
         }
         else
         {
             $("#CategoriesDiv").hide();
-            $("#secondImage").css("margin-left", "");
-            $("#secondImage").css("height", "95%");
         }
     });
 
@@ -228,15 +224,11 @@
         if(newWidth >= 1000)
         {
 
-            $("#secondImage").css("margin-left", "40px");
-            $("#secondImage").css("height", "68%");
             $("#CategoriesDiv").show();
         }
         else
         {
             $("#CategoriesDiv").hide();
-            $("#secondImage").css("margin-left", "");
-            $("#secondImage").css("height", "95%");
         }
     });
 
