--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -533,7 +533,7 @@
             <img src="~/content/images/USAIDLogo.png" style="margin-left:10px; margin-top:10px;" class="img-fluid" alt="Responsive image">
         </div>
         <div class="col-lg-2">
-            <img src="~/content/images/SecondLogo.png" style="margin-top:10px;" class="img-fluid" alt="Responsive image" id="secondImage">
+            <img src="~/content/images/SecondLogo.png" style="margin-top:10px;margin-left:10px; margin-right:10px;" class="img-fluid" alt="Responsive image" id="secondImage">
         </div>
         <div class="col-lg-2">
             <img src="~/content/images/EULogo.png" style="margin-left:10px; margin-top:10px;" class="img-fluid" alt="Responsive image">
@@ -618,8 +618,6 @@
             $("#MobileCategories").hide();
             $("#DesktopCategories").show();
             $("#CategoriesDiv").show();
-            $("#secondImage").css("margin-left", "40px");
-            $("#secondImage").css("height", "68%");
         }
         else
         {
@@ -630,8 +628,6 @@
                 $("#CategoriesDiv").hide();
             }
 
-            $("#secondImage").css("margin-left", "");
-            $("#secondImage").css("height", "95%");
         }
     });
 
@@ -644,8 +640,6 @@
             $("#MobileCategories").hide();
             $("#DesktopCategories").show();
             $("#CategoriesDiv").show();
-            $("#secondImage").css("margin-left", "40px");
-            $("#secondImage").css("height", "68%");
         }
         else
         {
@@ -656,8 +650,6 @@
                 $("#CategoriesDiv").hide();
             }
 
-            $("#secondImage").css("margin-left", "");
-            $("#secondImage").css("height", "95%");
         }
     });
 
