--- a/test/Views/Home/PostInternalPage.cshtml
+++ b/test/Views/Home/PostInternalPage.cshtml
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                 }
-                else
+                else if (@Model.Culture == "en")
                 {
                     <div class="card-transparent">
                         <div class="card-body" style="word-wrap: break-word">
@@ -125,6 +125,35 @@
                             <a href="@Model.Post.RedirectUrl" class="btn btn-primary" target="_blank">Перейти на сторінку організації</a>
                         </div>
                     </div>
+                }
+                else
+                {
+
+                    if(!string.IsNullOrEmpty(Model.Post.EnglishTitle))
+                    {
+                        <div class="card-transparent">
+                            <div class="card-body" style="word-wrap: break-word">
+                                <div style="display:flex; justify-content: center">
+                                </div>
+                                <h5 class="card-title  text-center" style="margin-top:30px;">@Model.Post.UkrainianTitle</h5>
+                                <p class="textFont" style="margin-top:30px;">@Html.Raw(Model.Post.UkrainianDescription)</p>
+                                <a href="@Model.Post.RedirectUrl" class="btn btn-primary" target="_blank">Перейти на сторінку організації</a>
+                            </div>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="card-transparent">
+                            <div class="card-body" style="word-wrap: break-word">
+                                <div style="display:flex; justify-content: center">
+                                </div>
+                                <h5 class="card-title  text-center" style="margin-top:30px;">@Model.Post.EnglishTitle</h5>
+                                <p class="textFont" style="margin-top:30px;">@Html.Raw(Model.Post.EnglishDescription)</p>
+                                <a href="@Model.Post.RedirectUrl" class="btn btn-primary" target="_blank">Go to organization page</a>
+                            </div>
+                        </div>
+                    }
+
                 }
             </div>
         </div>
